# OsKeRnEl2O24-GeneralOS-Rust-RiscV

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
crates/allocator/: Cargo.toml
crates/allocator/src/: buddy.rs  lib.rs  list.rs
crates/sbi/src/: legacy.rs  lib.rs
kernel/: Cargo.toml
kernel/src/: boot.rs  config.rs  console.rs  entry.S  linker.lds  logging.rs  macros.rs  main.rs  panic.rs
kernel/src/arch/: mod.rs
kernel/src/board/: qemu.rs
kernel/src/mm/: addr.rs  consts.rs  frame.rs  heap.rs  layout.rs  mod.rs
kernel/src/mm/addr/: mod.rs  phys.rs  virt.rs
kernel/src/mm/paging/: mod.rs  pagetable.rs  pte.rs
kernel/src/timer/: consts.rs  mod.rs
kernel/src/trap/: context.S  context.rs  handlers.rs  kexception.rs  kinterrupt.rs  mod.rs
