[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Qin-shihuang <0.0@owo.li>"]

[dependencies]
allocator = { path = "../crates/allocator" }
sbi = { path = "../crates/sbi" }

bitflags = "2"
log = "0"
lazy_static = { version = "1", features = ["spin_no_std"] }
riscv = "0"
spin = "0"


[features]
default = ["board_qemu"]
board_qemu = []

[profile.dev]
opt-level = 0
debug = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
lto = true
